added more htmls

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Git Tutorial</h1>
-        <img src="lifecycle.png" alt="lifecycle">
+        <img src="lifecycle.png" alt="lifecycle of git commands">
     </div>
 </body>
 </html>
