lifecycle of git

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <div class="container">
         <h1>Git Tutorial</h1>
+        <p>Lifecycle of git command</p>
+        <ul>
+            <li>untracked</li>
+            <li>Unmodified</li>
+            <li>Modified</li>
+            <li>staged</li>
+        </ul>
         <img src="lifecycle.png" alt="lifecycle of git commands">
     </div>
 </body>
