skipped staging area and fixed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Git Tutorial</h1>
-        <p>Lifecycle of git command</p>
+        <h3>Lifecycle of git command</h3>
         <ul>
             <li>untracked</li>
             <li>Unmodified</li>
